--- a/Homework/05-Web-Services-Testing/TestingWebServices/News.Tests/App.config
+++ b/Homework/05-Web-Services-Testing/TestingWebServices/News.Tests/App.config
@@ -15,7 +15,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="NewsContext" connectionString="data source=.;initial catalog=News;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="NewsContext" connectionString="data source=.;initial catalog=News.Tests;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
