--- a/Homework/05-Web-Services-Testing/TestingWebServices/News.Tests/News.Tests.csproj
+++ b/Homework/05-Web-Services-Testing/TestingWebServices/News.Tests/News.Tests.csproj
@@ -51,6 +51,10 @@
       <HintPath>..\packages\Microsoft.Owin.3.0.1\lib\net45\Microsoft.Owin.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Moq, Version=4.2.1507.118, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
+      <HintPath>..\packages\Moq.4.2.1507.0118\lib\net40\Moq.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -89,8 +93,10 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="MockContainer.cs" />
     <Compile Include="RepositoriesTests\TestingTheRepositories.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitTests\UnitTesting.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\News.Models\News.Models.csproj">
@@ -110,9 +116,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="UnitTests\" />
-  </ItemGroup>
+  <ItemGroup />
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
