--- a/Homework/01-ASP.NET-MVC-Introduction/Twitter/Twitter.App/Twitter.App.csproj
+++ b/Homework/01-ASP.NET-MVC-Introduction/Twitter/Twitter.App/Twitter.App.csproj
@@ -193,6 +193,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\NotificationsController.cs" />
@@ -265,6 +266,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Base\" />
     <Folder Include="Views\Notifications\" />
   </ItemGroup>
   <ItemGroup>
