--- a/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Twitter.App.csproj
+++ b/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Twitter.App.csproj
@@ -219,8 +219,12 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\BindingModels\EditProfileBindingModel.cs" />
+    <Compile Include="Models\ViewModels\SetPasswordViewModel.cs" />
+    <Compile Include="Models\ViewModels\EditProfileViewModel.cs" />
+    <Compile Include="Models\ViewModels\ProfileViewModel.cs" />
+    <Compile Include="Models\ViewModels\AccountViewModels.cs" />
+    <Compile Include="Models\ViewModels\ChangePasswordViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -275,6 +279,7 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Users\EditProfile.cshtml" />
+    <Content Include="Views\Users\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\Notifications\" />
