--- a/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Twitter.App.csproj
+++ b/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Twitter.App.csproj
@@ -222,6 +222,8 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Models\ViewModels\UserAndTweetsViewModel.cs" />
+    <Compile Include="Models\BindingModels\PostTweetBindingModel.cs" />
     <Compile Include="Models\ViewModels\TweetViewModel.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Controllers\NotificationsController.cs" />
@@ -304,9 +306,9 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Users\EditProfile.cshtml" />
-    <Content Include="Views\Users\ByUsername.cshtml" />
     <None Include="Views\Tweets\Favourite.cshtml" />
     <None Include="Views\Tweets\Index.cshtml" />
+    <Content Include="Views\Shared\_FormTweet.cshtml" />
     <None Include="Views\Users\Followers.cshtml" />
     <None Include="Views\Users\Following.cshtml" />
     <Content Include="Views\Shared\_UserHomePageHeader.cshtml" />
