--- a/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Twitter.App.csproj
+++ b/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Twitter.App.csproj
@@ -222,6 +222,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Models\ViewModels\UserAndFollowersViewModel.cs" />
     <Compile Include="Models\ViewModels\UserSearchViewModel.cs" />
     <Compile Include="Models\ViewModels\UserAndTweetsViewModel.cs" />
     <Compile Include="Models\BindingModels\PostTweetBindingModel.cs" />
